--- a/AplikacjaDoLosowania/Views/Home/Index.cshtml
+++ b/AplikacjaDoLosowania/Views/Home/Index.cshtml
@@ -15,6 +15,9 @@
                 <div class="card-body">
                     <h5 class="card-title">📌 Jak to działa?</h5>
                     <p class="card-text">
+
+                        <div>Zapraszam do korzystania, poniżej znajdziesz prostą instrukcje jak korzystać z aplikacji!</div>
+
                         1️⃣ Wybierz 10 graczy z bazy danych lub dodaj nowych. <br>
                         2️⃣ System wylosuje dwie drużyny po 5 osób. <br>
                         3️⃣ Po zakończeniu meczu wpisz wynik i zapisz historię rozgrywek.
