--- a/AplikacjaDoLosowania/Views/Home/Index.cshtml
+++ b/AplikacjaDoLosowania/Views/Home/Index.cshtml
@@ -17,6 +17,7 @@
                     <p class="card-text">
 
                         <div>Zapraszam do korzystania, poniżej znajdziesz prostą instrukcje jak korzystać z aplikacji!</div>
+                        <div></div>
 
                         1️⃣ Wybierz 10 graczy z bazy danych lub dodaj nowych. <br>
                         2️⃣ System wylosuje dwie drużyny po 5 osób. <br>
